<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_zumo"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ZumoActivity"
    android:background="@color/fondo">

    <TextView
        style="@style/subTitulo"
        android:layout_margin="10dp"
        android:text="@string/zumos" />

    <Button
        android:id="@+id/btn_limpiar_zumos"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/design_button_app"
        android:onClick="resetCantidadesZumos"
        android:text="@string/limpiar"
        android:textColor="@color/texto_botones"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_zumos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_botones_zumos"
        android:layout_below="@+id/btn_limpiar_zumos"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:id="@+id/linear_botones_zumos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/volver_zumos"
            style="@style/Botones"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/volver"
            android:onClick="volverRegistro"/>
        <Button
            android:id="@+id/continuar_zumos"
            style="@style/Botones"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/continuar"
            android:onClick="continuarSnacks"/>
    </LinearLayout>


</RelativeLayout>