<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".option_menu.AboutActivity"
    android:background="@color/fondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_volver_about"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_app_name_acerca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_autor_acerca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/autor"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_anio_acerca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/anio"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_volver_about"
        style="@style/Botones"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/volver" />

</RelativeLayout>